Fixed a CSS error, Firefox decided scrollbars are cool without any overflow.  My bad.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ header > h1 > a {
 }
 
 #content {
-	overflow: scroll;
+	overflow: auto;
 	min-height: 30em;
 }
 
